--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
-
+<div class="container">
 <iframe src="https://www.preceden.com/timelines/301802/embed" width="100%" height="365" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
 </iframe>
+			</div>
 		<!-- Carte Adeline -->
 
 			<div class="container">
@@ -108,23 +109,25 @@
 
 <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 
-		</section>
+</section>
 
 	<!-- Troisième partie -->	
 		
 		<section id="three" class="wrapper style1 align-center">	
  			<h3> Les migrants en France: qui sont-ils? </h3>
 <!-- Composition par âge de la population migrante -->
-
+<div class="container">
 <div class="infogram-embed" data-id="88c3dfb3-409c-4a2c-8356-f43c5472e55a" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
-	
+			</div>
 		</section>	
 
 	<!-- Quatrième partie -->	
 		
 		<section id="four" class="wrapper style1 align-center">	
  			<h3> Qu'en disent les candidats à la présidentielle? </h3>
+		
 	<!-- Partie Quentin -->
+
  <div class="compteur" id="compteur" style="position: fixed;margin-left: 0;
     margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:2%; padding-bottom:2%; padding-left:3%;z-index: 4;">
 
@@ -147,7 +150,7 @@ counterID=setInterval(counterUpdate, 2500)
 					<header>
 					</header>
 
-
+<div class="container">
 <div class="gen2">
 
     <img class="element2" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
@@ -212,7 +215,8 @@ counterID=setInterval(counterUpdate, 2500)
 <div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants».
 </div>
 </div>
-
+	</div>
+			
 <script>
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();   
@@ -237,7 +241,7 @@ $(document).ready(function(){
 		<!-- Graphe 3 -->
 			<section id="two" class="wrapper style2 align-center">
 				<div class="container">
-					<header>
+			<!--		<header>
 						<h2>Lorem ipsum dolor sit</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, autem.</p>
 					</header>
@@ -269,8 +273,8 @@ $(document).ready(function(){
 								<a href="#" class="button alt big">Learn More</a>
 							</li>
 						</ul>
-					</footer>
-				</div>
+					</footer> -->
+				</div> 
 			</section>
 
 		<!-- Footer -->
@@ -330,6 +334,7 @@ $(document).ready(function(){
 					</ul>
 				</div>
 			</footer>
+
 
 	</body>
 </html>
