--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 <section id="two" class="wrapper style1 align-center">
 			<div class="container">
 				<header>
-					<h2> Demandes d'asile : la situation en 2015</h2>
-					<p> Nombre de demandes et taux de réponses positives par pays</p>
+					<h2>Demandes d'asiles et taux d'acceptation (2015)</h2>
+					<p>Lorem ipsum dolor sit amet adipisicing elit. Delectus consequatur sed tempus.</p>
 				</header>
 				<script id="infogram_0_map-9075157905404" title="Map" src="//e.infogr.am/js/dist/embed.js?H42" type="text/javascript"></script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogr.am/map-9075157905404" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Map</a><br><a href="https://infogr.am" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create your own infographics</a></div>
 
@@ -124,20 +124,20 @@
 
 	<!-- Quatrième partie -->	
 		
-		<section id="four" class="wrapper style1 align-center">	
+		<section id="four" class="wrapper style13 align-center">	
  			<h3> Qu'en disent les candidats à la présidentielle? </h3>
 		
 	<!-- Partie Quentin -->
 
  <div class="compteur" id="compteur" style="position: fixed;margin-left: 0;
-    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:2%; padding-bottom:2%; padding-left:3%;z-index: 4;">
+    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:1%; padding-bottom:1%; padding-left:3%;z-index: 4;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
-<font size="+1">          Depuis que vous avez ouvert cette page </font>
+<font size="+0">          Depuis que vous avez ouvert cette page </font>
 <span id="counter">0000</span>
 
-<font size="+1"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique</font>
+<font size="+0"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique</font>
 
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
@@ -145,8 +145,6 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 </div>
-
-<section id="one" class="wrapper style12 align-center">
 				<div class="container">
 					<header>
 					</header>
