--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(document).ready(function(){
 		
 	<!-- Sixième partie -->	
 	
-	<section id="five">
+	<section id="five" class="wrapper style13 align-center">
 		<h3> Quelques exemples d'initiatives </h3>
 	</section>
 			
