--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
-	<font size="-1">       <h4>   Depuis que vous avez ouvert cette page</h4> </font>
+	<font size="-1">        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 
-<font size="-1"> <h4> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </h4></font>
+<font size="-1"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </font>
 
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
