--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@ $(document).ready(function(){
 			
 
 		<!-- Graphe 3 -->
-			<section id="two" class="wrapper style2 align-center">
+			<!--	<section id="two" class="wrapper style2 align-center">
 				<div class="container">
-			<!--		<header>
+				<header>
 						<h2>Lorem ipsum dolor sit</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, autem.</p>
 					</header>
@@ -272,10 +272,10 @@ $(document).ready(function(){
 								<a href="#" class="button alt big">Learn More</a>
 							</li>
 						</ul>
-					</footer> -->
+					</footer> 
 				</div> 
 			</section>
-
+-->
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
