--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script2.js"></script>
+		<script type="text/javascript" src="camembert.js"></script>
 
 <!--		<script type="text/javascript" src="js/jquery.min.js"></script> -->
 		<script type="text/javascript" src="js/skel.min.js"></script>
@@ -76,7 +77,8 @@
 			</div>
 
 		<!-- Camembert Aliénor -->
-
+			
+<div id="camembert" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 
 		</section> 
 
