--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="#one">Partie 1</a></li>
+						<li><a href="#two">Partie 2</a></li>
+						<li><a href="elements.html">Partie 3</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -85,7 +85,19 @@
 
 		
 
-	<!-- Deuxième partie -->	
+	<!-- Deuxième partie -->
+		
+		<!-- Banner2 -->
+			<section id="banner2">
+				<h2>Deuxieme partie</h2>
+				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
+				<p></p>
+				<ul class="actions">
+					<li>
+						<a href="#two" class="button big">Je découvre</a>
+					</li>
+				</ul>
+			</section>
 
 
 		<section id="two" class="wrapper style12 align-center">
