--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"> </script> 
-		<script src="http://code.jquery.com/jquery-1.11.0.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.0.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script2.js"></script>
