--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		
-		<link rel="icon" href="favicon-lightbulb-o.ico" type="image/x-icon">
-		<link rel="shortcut icon" href="favicon-lightbulb-o.ico" type="image/x-icon">
+		<link rel="icon" href="favicon-globe.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="favicon-globe.ico" type="image/x-icon">
 		<!-- Fin -->
 	</head>
 	<body class="landing">
