--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- Graphe intro Irène -->
 
 			<div class="container">
-					<div id="container"></div>
+					<div id="container" style="width:50%"></div>
 			</div>
 
 		<!-- Camembert Aliénor -->
