--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"> </script> 
-		<script src="https://code.jquery.com/jquery-1.11.0.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script> 
+		<!--<script src="https://code.jquery.com/jquery-1.11.0.js"></script>-->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script2.js"></script>
@@ -76,11 +76,17 @@
 		<!-- Graphe intro Irène -->
 
 			<div class="container">
-					<div id="container" style="width:50%"></div>
+					<div id="container" style="width:50%;"></div>
+				<div style="right:0; width:50%;"</div>
 			</div>
 
+
+			
+		</section> 
 		<!-- Camembert Aliénor -->
-<div class="alienor">
+<section id="onee" class="wrapper style13 align-center">
+
+<div class="container">
 	
 <div id="alienor"></div>
 			</div>
