--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 			<div class="container">
 					<div id="container" style="width:50%;"></div>
-				<div style="right:0; width:50%;"</div>
+				<div style="right:0; width:50%;"> Définitions </div>
 			</div>
 
 
