--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 				<h2>Deuxieme partie</h2>
 				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
 				<p></p>
-				<ul class="actions">
+				<ul class="actions2">
 					<li>
-						<a href="#two" class="button big">Je découvre</a>
+						<a href="#two" class="button big2">Je découvre</a>
 					</li>
 				</ul>
 			</section>
