--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
 		<!-- Graphe intro Irène -->
 
-			<div class="container">
+			<div class="container"  style="display:flex;justify-content:space-between;" >
 					<div id="container" style="width:50%;"></div>
-				<div style="right:0; width:50%;"> Définitions </div>
+				<div style="right:0; width:50%;"> <h2> Définitions </h2> </div>
 			</div>
 
 
