--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <!-- <div class="infogram-embed" data-id="7df11091-58b7-4766-b15f-0b1b8c9b3a4f" data-type="interactive" data-title=""></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script"),d=o[0],r=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=r+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var a=e.createElement("script");a.async=1,a.id=s,a.src=i,d.parentNode.insertBefore(a,d)}}(document,0,"infogram-async","//e.infogr.am/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><br><a href="https://infogr.am/create/line-chart?utm_source=embed_bottom&utm_medium=seo&utm_campaign=line_chart" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Create line charts</a></div>
 -->
 <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-
+	</div>
 				
 </section>
 
@@ -181,14 +181,12 @@
 <span id="counter">0000</span>
 
 <font size="-1"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </font>
-
+	 </div>
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
 </script>
 
 </div>
-</div>
-				<div class="container">
 					<header>
 					</header>
 
@@ -212,7 +210,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px black solid; margin-left:15px;    box-shadow: 3px 3px 3px  rgba(227,0,27,0.5);"/>
 
-	<div class="element2"/> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
+	<div class="element2"> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
 
 </p> </div>
 
@@ -229,39 +227,39 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" title="François Fillon" src="fillon.png" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
-	<div class="element2"/> <p class="triangle-right left"">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
+	<div class="element2"> <p class="triangle-right left">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
 
 </p> </div>
 
 
 </div>
-
-<div class="devrait1" style='background-color:  transparent;'> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
+		
+<div class='devrait1' style='background-color:  transparent;'> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
 </div>
 </div>
 		
 <!-- Copé -->
-<div class="gen">
+<div class='gen'>
 
-<div class="roundedImage" > 
+<div class='roundedImage' > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="top" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
+    <img class='element' width='100' height='100' data-toggle='tooltip'  data-placement='top' title='Jean-François Copé' src='cope.jpg' alt='' style='border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);'/>
 
-  <div class="element2"> <p class="triangle-right left"">On est aujourd’hui le premier <a class="def" href="#" data-toggle="tooltip" data-placement="top" title="Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent">hotspot </a> d’Europe
+  <div class='element2'> <p class="triangle-right left'>On est aujourd’hui le premier <a class='def' href='#' data-toggle='tooltip' data-placement='top' title='Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent'>hotspot </a> d’Europe
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants».
+<div class='devrait1' style='background-color:  transparent'> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants».
 </div>
 </div>
 	</div>
 			
 <script>
 $(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();   
+    $('[data-toggle='tooltip']').tooltip();   
 });
 </script>
 
@@ -269,7 +267,7 @@ $(document).ready(function(){
 
 	<!-- Cinquième partie -->	
 
-	<section id="five" class="wrapper style1 align-center">
+	<section id='five' class='wrapper style1 align-center'>
 		<h2> Quizz </h2>
 	</section>
 		
