--- a/index.html
+++ b/index.html
@@ -234,32 +234,32 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 		
-<div class='devrait1' style='background-color:  transparent;'> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
+<div class="devrait1" style="background-color:  transparent;"> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
 </div>
 </div>
 		
 <!-- Copé -->
-<div class='gen'>
+<div class="gen">
 
-<div class='roundedImage' > 
+<div class="roundedImage" > 
 
-    <img class='element' width='100' height='100' data-toggle='tooltip'  data-placement='top' title='Jean-François Copé' src='cope.jpg' alt='' style='border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);'/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="top" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
-  <div class='element2'> <p class="triangle-right left'>On est aujourd’hui le premier <a class='def' href='#' data-toggle='tooltip' data-placement='top' title='Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent'>hotspot </a> d’Europe
+  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier <a class="def" href="#" data-toggle="tooltip" data-placement="top" title="Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent">hotspot </a> d’Europe
 
 </p> </div>
 
 
 </div>
 
-<div class='devrait1' style='background-color:  transparent'> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants».
+<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	</div>
 			
 <script>
 $(document).ready(function(){
-    $('[data-toggle='tooltip']').tooltip();   
+    $('[data-toggle="tooltip"]').tooltip();   
 });
 </script>
 
@@ -267,7 +267,7 @@ $(document).ready(function(){
 
 	<!-- Cinquième partie -->	
 
-	<section id='five' class='wrapper style1 align-center'>
+	<section id="five" class="wrapper style1 align-center">
 		<h2> Quizz </h2>
 	</section>
 		
