--- a/index.html
+++ b/index.html
@@ -117,6 +117,18 @@
 				</ul>
 			</section>
 
+			<section id="banner2">
+				<h2>Deuxieme partie</h2>
+				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
+				<p></p>
+				<ul class="actions2">
+					<li>
+						<a href="#two" class="button big2">Je découvre</a>
+					</li>
+				</ul>
+			</section>
+
+
 
 		<section id="two" class="wrapper style12 align-center">
   			<h2> La crise des migrants : un état des lieux </h2>
