--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 		</section> 
 		<!-- Camembert Aliénor -->
 <section id="three" class="wrapper style13 align-center">
+	<h2> Guacamole et pomme de terre? </h2>
 
 <div class="container">
 	
@@ -117,7 +118,7 @@
 				</ul>
 			</section>
 
-			<section id="banner2">
+			<section style="background-image:url("../images/Salgado2.jpeg") ;  ">
 				<h2>Deuxieme partie</h2>
 				<h3 style="color:white"> Comment l'Europe gère-t-elle les migrations? </h3>
 				<p></p>
