--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script3.js"></script>
 		<script type="text/javascript" src="demandes_asile_fr.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!--		<script type="text/javascript" src="js/jquery.min.js"></script> -->
 		<script type="text/javascript" src="js/skel.min.js"></script>
@@ -35,6 +36,7 @@
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
+			 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		
