--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage"> 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px black solid; margin-left:15px;    box-shadow: 3px 3px 3px  rgba(227,0,27,0.5);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px black solid; margin-left:15px;    box-shadow: 3px 3px 3px  rgba(227,0,27,0.5);"/>
 
 	<div class="element2"> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
 
@@ -230,7 +230,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage"> 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip" title="François Fillon" src="fillon.png" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
 	<div class="element2"> <p class="triangle-right left">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
 
@@ -248,9 +248,9 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="top" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
 
-  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier <a class="def" href="#" data-toggle="tooltip" data-placement="top" title="Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent">hotspot </a> d’Europe
+  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier <a class="def" href="#" data-toggle="tooltip" data-placement="left" title="Les hotspots sont des centres d’accueil de migrants mis en place en Grèce et en Italie, à la demande de l’UE pour endiguer l’afflux migratoire en direction du continent">hotspot </a> d’Europe
 
 </p> </div>
 
